
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@color/colorAccent"
            android:background="@color/colorPrimaryDark"
            android:text="@string/kindly_enter_your_details_to_become_an_donor_and_be_sure_that_the_information_provided_by_you_is_true_if_someone_need_blood_may_contact_you"
            />
<EditText
android:id="@+id/donor_name"
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    android:hint="@string/enter_name"
    android:layout_marginTop="20sp"
    android:textSize="20sp"
    android:textStyle="bold"
    android:inputType="textCapWords"
    />
    <EditText
        android:id="@+id/donor_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_age"
        android:layout_marginTop="20sp"
        android:textSize="20sp"
        android:textStyle="bold"
        />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:id="@+id/donor_lv1"
            android:entries="@array/gender"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="30sp"
           android:entries="@array/bloodgroup"
            android:id="@+id/donor_lv2"
            android:layout_marginTop="40sp"

            />
    <EditText
        android:id="@+id/donor_phno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_phone_number"
        android:layout_marginTop="20sp"
        android:textSize="20sp"
        android:inputType="number"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/donor_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name_of_city"
        android:layout_marginTop="20sp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:inputType="textCapWords"
        />
    <EditText
        android:id="@+id/donor_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name_of_state"
        android:layout_marginTop="20sp"
        android:textSize="20sp"
        android:inputType="textCapWords"
        android:textStyle="bold"
        />
    <EditText
        android:inputType="textCapWords"
        android:id="@+id/donor_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name_of_country"
        android:layout_marginTop="20sp"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <EditText
        android:inputType="textCapWords"
        android:id="@+id/donor_message"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:hint="@string/enter_your_feelings_message_to_all"
        android:layout_marginTop="20sp"
        android:textSize="20sp"
        android:textStyle="bold"
        />
        <EditText
            android:id="@+id/donor_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dd_mm_yyyy"
            android:layout_marginTop="20sp"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_marginTop="40sp"
           android:text="@string/submit"
            android:textSize="24sp"
            android:textStyle="bold"
            android:background="@drawable/download4"
            android:onClick="submit_donor"
            />
    </LinearLayout>
</ScrollView>