<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search">
    <Button
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:background="@drawable/ic_arrow_back_black_24dp"
        android:onClick="back"
        />
<ImageView
    android:layout_width="150sp"
    android:layout_height="150sp"
    android:id="@+id/user_image"
    android:layout_marginStart="120sp"
    android:layout_marginTop="10sp"
    android:src="@mipmap/ic_launcher"
    />
<Button
    android:layout_width="match_parent"
    android:layout_height="70sp"
    android:layout_marginTop="20sp"
    android:text="@string/home"
    android:textAlignment="textStart"
    android:textSize="24sp"
    android:onClick="home"
    />
    <Button
        android:layout_width="match_parent"
        android:layout_height="70sp"
       android:text="@string/user_proflie"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:onClick="user_profile"
        />
    <Button
        android:text="@string/settings"
        android:layout_width="match_parent"
        android:layout_height="70sp"
       android:onClick="settings"
        android:textAlignment="textStart"
        android:textSize="24sp"
        />
    <Button
        android:text="@string/help"
        android:layout_width="match_parent"
        android:layout_height="70sp"
      android:onClick="help"
        android:textAlignment="textStart"
        android:textSize="24sp"
        />
    <Button
        android:onClick="complaint"
        android:layout_width="match_parent"
        android:layout_height="70sp"
  android:text="@string/complaint"
        android:textAlignment="textStart"
        android:textSize="24sp"
        />
    <Button
        android:onClick="logout"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:text="@string/logout"
        android:textAlignment="textStart"
        android:textSize="24sp"
        />
</LinearLayout>