<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<androidx.cardview.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/reciever_image"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:src="@mipmap/ic_launcher"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/reciever_name"
                android:layout_width="300sp"
                android:layout_marginStart="8dp"
                android:layout_height="wrap_content"
                android:hint="@string/name" />

            <TextView
                android:id="@+id/reciever_phno"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/mobile_number" />

            <TextView
                android:id="@+id/reciever_city"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/city" />

            <TextView
                android:id="@+id/reciever_gender"
                android:layout_width="300sp"
                android:layout_marginStart="8dp"
                android:layout_height="wrap_content"
                android:hint="@string/gender" />

            <TextView
                android:id="@+id/reciever_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:layout_marginStart="8dp"
                android:hint="@string/age" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
</RelativeLayout>