<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_email1"
        android:textSize="24sp"
        android:textColor="@color/colorAccent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        android:layout_marginTop="110sp"

        />
    <TextView

        android:textSize="24sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"
        android:layout_marginTop="170sp"
        />

    <EditText

        android:textColor="@color/colorAccent"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="180sp"
        android:layout_marginStart="180sp"
        android:layout_marginTop="110sp"
        android:layout_alignParentTop="true"
        android:inputType="textEmailAddress"
        android:id="@+id/login_et1"
        android:hint="@string/enter_email" />
    <EditText
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="180sp"
        android:layout_marginStart="180sp"
        android:layout_marginTop="170sp"
        android:id="@+id/login_et2"
        android:layout_alignParentTop="true"
        android:hint="@string/enter_password" />
    <Button
        android:layout_width="110sp"
        android:layout_height="50sp"
        android:text="@string/login"
        android:onClick="mainfun"
        android:layout_marginTop="240sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/images"
        />
    <View
        android:background="@color/colorAccent"
        android:layout_width="120sp"
        android:layout_height="4dp"
        android:layout_below="@id/clock_login"
        android:layout_marginStart="265sp"
        />
    <DigitalClock
        android:id="@+id/clock_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320sp"
        android:text="@string/new_register"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:onClick="fun"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/need_help"
        android:background="@color/colorAccent"
        android:onClick="needhelp"
        />
    <TextView
        android:layout_width="150sp"
        android:layout_height="100sp"
        android:layout_marginTop="50sp"
        android:textColor="@color/colorAccent"
        android:text="@string/login_1"
        android:textSize="36sp"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>