<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/download4"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80sp"
        android:layout_marginStart="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginEnd="20sp"
        android:hint="@string/enter_name"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/colorAccent"
        android:id="@+id/et1"
        android:layout_alignParentTop="true"
        android:textSize="24sp"
        />
    <EditText
        android:textStyle="bold"
        android:layout_marginTop="150sp"
        android:id="@+id/et2"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:hint="@string/enter_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginLeft="20sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="20sp"
        android:layout_marginEnd="20sp"
        />
    <EditText
        android:id="@+id/et3"
        android:textStyle="bold"
        android:inputType="numberPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220sp"
        android:layout_marginStart="20sp"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/colorAccent"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="20sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:hint="@string/enter_password"
        android:textSize="24sp"

        />
    <EditText
        android:id="@+id/et4"
        android:textStyle="bold"
        android:inputType="numberPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="290sp"
        android:layout_marginStart="20sp"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/colorAccent"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="20sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:hint="@string/confirm_password"
        android:textSize="24sp"
        />
    <EditText
        android:id="@+id/et5"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="360sp"
        android:layout_marginStart="20sp"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/colorAccent"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="20sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:hint="@string/enter_phone_number"
        android:textSize="24sp"
        />
    <Spinner
        android:id="@+id/s1"
        android:layout_width="100sp"
        android:layout_height="50sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginEnd="20sp"
android:entries="@array/gender"
        android:layout_marginTop="420sp"
        />
    <ImageButton
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:src="@drawable/download3"
        android:layout_alignParentTop="true"
        android:onClick="fun1"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="450sp"
        android:layout_centerHorizontal="true"
        android:onClick="register"
        android:text="@string/register"
        android:layout_alignParentTop="true"
        />
</RelativeLayout>