<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="Blood Donor"
        app:titleTextColor="@color/colorPrimary"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        app:menu="@menu/searchmenu"
        android:layout_height="?attr/actionBarSize"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60sp"
        >
        <TextView
          android:id="@+id/text_country"
            android:layout_marginStart="5sp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/country"
            />
        <TextView
            android:layout_marginStart="5sp"
            android:textColor="@color/colorAccent"
            android:layout_weight="1"
            android:text="@string/state"
            android:id="@+id/text_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_marginStart="5sp"
            android:textColor="@color/colorAccent"
            android:layout_weight="1"
            android:text="@string/city"
            android:id="@+id/text_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="76sp"
     android:orientation="horizontal"
        android:id="@+id/button_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <Spinner
            android:id="@+id/select_country"
            android:layout_width="200sp"
            android:layout_height="50sp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:drawableEnd="@drawable/ic_location_on_black_24dp"
            android:text="@string/country"
            android:textStyle="bold" />

        <Spinner
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:layout_height="50sp"
                android:text="@string/state"
                android:drawableEnd="@drawable/ic_location_on_black_24dp"
                android:layout_width="200sp"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                android:id="@+id/select_state"
                />
            <Spinner
                android:layout_weight="1"
                android:layout_height="50sp"
                android:text="@string/city"
                android:drawableEnd="@drawable/ic_location_on_black_24dp"
                android:layout_width="200sp"
                android:background="@color/colorPrimary"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:id="@+id/select_city"
                />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/first_recycler"
        android:layout_marginTop="130sp"
        android:layout_marginBottom="70sp"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="makerequest"
        android:layout_weight="1"
        android:layout_marginTop="600sp"
        android:background="@color/colorAccent"
        android:text="@string/become_donor" />
    <Button
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_marginTop="600sp"
        android:layout_height="wrap_content"
        android:onClick="finddonor"
        android:text="@string/find_donor"
        android:background="@color/colorAccent"
        />
</LinearLayout>
</RelativeLayout>